--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@nestjs/core": "^6.0.0",
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3"
